--- a/frontend/src/components/GlassCard.module.css
+++ b/frontend/src/components/GlassCard.module.css
@@ -1,5 +1,5 @@
 .glassCard {
-  background: rgba(200, 200, 200, 0.2);
+  background: #966fd670;
   backdrop-filter: blur(30px);
   border-radius: 15px;
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
