--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -3,7 +3,7 @@
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(255, 255, 255, 0.1);
+  background: #966fd670;
   backdrop-filter: blur(20px);
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -17,7 +17,8 @@
 }
 
 .homeButton,
-.aboutButton {
+.aboutButton,
+.navButton {
   color: #fff;
   text-decoration: none;
   padding: 8px 16px;
@@ -28,6 +29,7 @@
 }
 
 .homeButton:hover,
-.aboutButton:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+.aboutButton:hover,
+.navButton:hover {
+  background-color: #966fd699;
 }
